# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "mysql-k8s-operator"  # Charm is not meant to be packaged
dependencies = [
  "ops~=2.23",
  "lightkube~=0.19.1",
  "tenacity~=8.5",
  "boto3~=1.42",
  "jinja2~=3.1",
  "pyyaml~=6.0",
]
requires-python = "~=3.10"

[dependency-groups]
charm-libs = [
    # data_platform_libs/v0/data_interfaces.py
    "ops>=2.23.1",
    # data_platform_libs/v0/upgrade.py
    "poetry-core",
    # data_platform_libs/v0/upgrade.py requires pydantic ^1.10
    # data_platform_libs/v0/data_models.py requires pydantic ^1.10
    # tempo_coordinator_k8s/v0/charm_tracing.py requires pydantic
    "pydantic~=1.10",
    # tls_certificates_interface/v1/tls_certificates.py
    # tls_certificates lib uses a feature only available in cryptography >=42.0.5
    "cryptography>=42.0.5",
    "jsonschema",
    # loki_k8s/v0/loki_push_api.py and prometheus_k8s/v0/prometheus_scrape.py
    "cosl>=0.1.1",
    # tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
]
format = [
    "ruff~=0.14.13",
]
lint = [
    "ruff~=0.14.13",
    "codespell~=2.4",
    "shellcheck-py~=0.11.0",
]
unit = [
    "pytest~=7.4",
    "pytest-mock~=3.15",
    "coverage[toml]~=7.13",
    "parameterized~=0.9.0",
]
integration = [
    "pytest~=7.4",
    "pytest-operator~=0.43.2",
    "juju~=3.6",
    "ops~=2.23",
    "mysql-connector-python~=9.1.0",
    "tenacity~=8.5",
    "boto3~=1.42",
    "pyyaml~=6.0",
    "urllib3~=2.0",
    "lightkube~=0.19.1",
    "kubernetes~=27.2.0",
    "allure-pytest~=2.15",
    "allure-pytest-default-results~=0.1.3",
    "pytest-asyncio~=0.26.0",
    "jubilant-backports~=1.4",
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.2.0"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["juju3", "only_with_juju_secrets", "only_without_juju_secrets"]
asyncio_mode = "auto"

# Linting tools configuration
[tool.ruff]
# preview and explicit preview are enabled for CPY001
preview = true
target-version = "py38"  # Bump when ready to re-lint
src = ["src", "."]
line-length = 99

[tool.ruff.lint]
explicit-preview-rules = true
select = [
  "A",
  "E",
  "W",
  "F",
  "C",
  "N",
  "D",
  "I",
  "B",
  "CPY001",
  "RUF",
  "S",
  "SIM",
  "UP",
  "TC",
]
ignore = [
  "D107", # Ignore D107 Missing docstring in __init__
  "E501", # Ignore E501 Line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D1",
  "D417",
  # Asserts
  "B011",
  # Disable security checks for tests
  "S",
]

[tool.ruff.lint.flake8-copyright]
# Check for properly formatted copyright header in each file
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
